# ML_data_challenge

./: .gitignore  README.md  data_challenge.ipynb  pyproject.toml
notes/: data_refining.md  features.md  notes.md  project.md  report_draft.md  syntax_prompt.md  thoughtprocess.md  venv_setup.md
src/: data_summary.py  venv_setp.md
src/classification/decision_tree/: 01_inspect_data.py  02_select_features.py  03_split_data.py  04_preprocess_data.py  05_train_validate_tree.py  06_evaluate_test_tree.py  07_save_baseline_results.py  README.md  common.py
src/classification/tab_net/: 01_inspect_data.py  02_prepare_features.py  03_train_validate_tabnet.py  04_evaluate_test_tabnet.py  README.md  common.py
src/clustering/hdbscan/: 01_inspect_data.py  02_evaluate_hdbscan.py  03_profile_clusters.py  common.py
src/clustering/k_medoids/: 01_inspect_data.py  02_prepare_features.py  03_build_distance_matrix.py  04_evaluate_k.py  05_profile_clusters.py  common.py
src/preprocessing/: pass1.py
src/v1_pipeline/: v1_kmedoids_pipeline.py
src/v1_pipline/: v1_decision_tree_pipeline.py  v1_kmedoids_pipeline.py
