[project]
name = "data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kmedoids>=0.5.5",
    "matplotlib>=3.10.9",
    "mlxtend>=0.24.0",
    "pandas>=3.0.3",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
]
